changed "Send to L1 manager" to "Send to manager"

--- a/application/modules/default/views/scripts/appraisalself/edit.phtml
+++ b/application/modules/default/views/scripts/appraisalself/edit.phtml
@@ -272,7 +272,7 @@ if(empty($this->check_ratings_exists)) { ?>
 				<input type="hidden" name="app_status" id="app_status" value="<?php echo $appStatus;?>">
 				<input type="hidden" name="mgr_levels" id="mgr_levels" value="<?php echo $this->mgrLevels;?>">
 				<input type="button" class="margin_l_1" value="Save As Draft" onclick="saveAppraisalDetails('later');"/>
-				<input type="button" value="Send to L1 Manager" onclick="saveAppraisalDetails('submit');"/>
+				<input type="button" value="Send to manager" onclick="saveAppraisalDetails('submit');"/>
 				<button onclick="window.location.href='<?php echo BASE_URL; ?>appraisalself';" type="button" >Clear</button>
 			</div>
 			</div>
