L1 overall manager rating removed from validator and template

--- a/application/modules/default/views/scripts/myteamappraisal/getempcontent.ajax.phtml
+++ b/application/modules/default/views/scripts/myteamappraisal/getempcontent.ajax.phtml
@@ -241,7 +241,7 @@ if(count($data) > 0 && !empty($data['rating_arr']))
 			}
 	    });
 	    
-	    $('.li_rating_class_'+key).each(function(){
+	    /*$('.li_rating_class_'+key).each(function(){
             var qval = $(this).val();
             var qid = $(this).prop('id');
             if(qval == '')
@@ -273,7 +273,7 @@ if(count($data) > 0 && !empty($data['rating_arr']))
                 	errorarray.push(2);
                 }
             }
-        });
+        });*/
         
 	    $('.app_ratings_text_'+key).each(function(){
             var qval = $(this).val();
