--- a/application/modules/default/views/scripts/myteamappraisal/getsearchedstatus.ajax.phtml
+++ b/application/modules/default/views/scripts/myteamappraisal/getsearchedstatus.ajax.phtml
@@ -114,7 +114,7 @@ else
 <?php                 
                 //}
 ?>                
-                <div class="add_manager_response" id="id_add_manager_response_<?php echo $key;?>">
+                <!--<div class="add_manager_response" id="id_add_manager_response_<?php echo $key;?>">
                     <span class="l_manager_txt">L<?php echo $edata['line_status'];?> Manager Overall Rating</span>
                     <input class="app_req_field li_rating_class_<?php echo $key;?>" type="hidden" id="consol_rating_<?php echo $key;?>" name="consol_rating" value="<?php echo $edata['line_rating_'.$edata['line_status']];?>">
                     <div id="id_rate_<?php echo $key;?>" class="rateit" data-rateit-backingfld="#consol_rating_<?php echo $key;?>" data-rateit-step="1" 
@@ -133,7 +133,7 @@ else
 				<?php     
                 }
 				?>	
-                </div>
+                </div>-->
 <?php        
                 if($edata['line_status'] > 1)
                 {                    
