color changes, etc..

--- a/public/media/css/rateit.css
+++ b/public/media/css/rateit.css
@@ -84,6 +84,7 @@
 .rating_star_3 .rateit .rateit-selected{ background: url(star_3.png) left -18px;}
 .rating_star_4 .rateit .rateit-selected{ background: url(star_4.png) left -18px;}
 .rating_star_5 .rateit .rateit-selected{ background: url(star_5.png) left -18px;}
+.rating_star_6 .rateit .rateit-selected{ background: url(star_5.png) left -18px;}
 
 .rating_star_new_1 .rateit .rateit-selected{ background: url(star_1.png) left -18px;}
 .rating_star_new_2 .rateit .rateit-selected{ background: url(star_1.png) left -18px;}
