--- a/application/modules/default/views/scripts/myteamappraisal/getempcontent.ajax.phtml
+++ b/application/modules/default/views/scripts/myteamappraisal/getempcontent.ajax.phtml
@@ -577,6 +577,7 @@ if(count($data) > 0 && !empty($data['rating_arr']))
             $('div.rateit, span.rateit').rateit();
 		});
 	</script>
+    <script type="text/javascript" src="<?php echo MEDIA_PATH;?>js/pa.js"></script>
 <?php     
     }
 }
