added question types into questions, e.g. comment, rating, achievement select... TO DO: options are hardcoded, should not be configurable but should be defined somewhere on one place. Adding/viewing/editing questions already contains these types, but they are not yet used in appraisals.

--- a/application/modules/default/views/scripts/appraisalquestions/form.phtml
+++ b/application/modules/default/views/scripts/appraisalquestions/form.phtml
@@ -64,6 +64,7 @@ if($this->ermsg !='')
 		<?php echo $this->form->id; ?>
         <div class="total-form-controller <?php echo $viewclass;?>">
 			<?php echo sapp_Helper::sd_form_helper($this->msgarray, $this->form, 'pa_category_id','', '','required',$departmentArr);?>
+            <?php echo sapp_Helper::sd_form_helper($this->msgarray, $this->form, 'pa_type_id','', '','required', array());?>
 			<?php echo sapp_Helper::sd_form_helper($this->msgarray, $this->form, 'question',"Special characters allowed are - ? &#39; . , / # @ $ & * ( ) !", '','required',array());?>
 			<?php echo sapp_Helper::sd_form_helper($this->msgarray, $this->form, 'description','', 'textareaheight','',array());?>
 					
