--- a/application/modules/default/views/scripts/appraisalquestions/add.phtml
+++ b/application/modules/default/views/scripts/appraisalquestions/add.phtml
@@ -51,6 +51,7 @@ if($this->ermsg !='')
 		<?php echo $this->form->id; ?>
         <div class="total-form-controller <?php echo $viewclass;?>">
 			<?php echo sapp_Helper::sd_form_helper($this->msgarray, $this->form, 'pa_category_id','', '','required',$departmentArr);?>
+            <?php echo sapp_Helper::sd_form_helper($this->msgarray, $this->form, 'pa_type_id','', '','required', array());?>
 			<div id="multi_dept_div">
 			<?php if(!$_POST){?>
 				<div id='parent_0' class="add_request" >
